--- a/popup.html
+++ b/popup.html
@@ -39,13 +39,22 @@
   <body>
     <input type="number" id="delayset" name="delayset" />
       <select id="userid">
-        <option value="0">王西迪</option>
+        <option value="0">刘俊</option>
         <option value="1">张凡</option>
         <option value="2">马婧云</option>
         <option value="3">党从飞</option>
         <option value="3">宋浩</option>
         <option value="3">王振亭</option>
-        <option value="3">王振亭</option>
+        <option value="3">蔡叙伦</option>
+        <option value="3">虞珊玲</option>
+
+        <option value="3">张晶</option>
+        <option value="3">徐新生</option>
+        <option value="3">张燕萍</option>
+        <option value="3">严雪</option>
+        <option value="3">严焱</option>
+        <option value="3">刘冲亚</option>
+
       <!--  <option value="3">蔡叙伦</option>   -->
       </select>
     <div id="blue">save</div>
