--- a/popup.html
+++ b/popup.html
@@ -53,10 +53,17 @@
         <option value="3">严雪</option>
         <option value="3">严焱</option>
         <option value="3">刘冲亚</option>
+        <option value="3">赵慧</option>
+        <option value="3">王晓雯</option>
+         <option value="3">王修明</option>
+         <option value="3">杨炜</option>
+          <option value="3">张蕾black</option>
+            <option value="3">何哲black</option>
+              <option value="3">郑梓妍white</option>
 
       <!--  <option value="3">蔡叙伦</option>   -->
       </select>
     <div id="blue">save</div>
-
+    <div id="youhua">设置</div>
   </body>
 </html>
