--- a/popup.html
+++ b/popup.html
@@ -34,28 +34,48 @@
     }
 
     </style>
-    <script src="popup.js"></script>
+
   </head>
   <body>
     <input type="number" id="delayset" name="delayset" />
       <select id="userid">
         <option value="0">刘俊</option>
-        <option value="1">王振亭</option>
-        <option value="2">蔡叙伦</option>
-        <option value="3">虞珊玲</option>
-        <option value="4">徐新生</option>
-        <option value="5">张燕萍</option>
-        <option value="6">刘冲亚</option>
-        <option value="7">王晓雯</option>
-         <option value="8">王修明</option>
-         <option value="9">杨炜</option>
-          <option value="10">张蕾black</option>
-        <option value="11">何哲black</option>
-         <option value="12">郑梓妍white</option>
+        <option value="1">王振亭5s</option>
+        <option value="2">虞珊玲5s</option>
+        <option value="3">姚旭</option>
+        <option value="4">刘冲亚</option>
+         <option value="5">王修明</option>
+         <option value="6">杨炜</option>
+          <option value="7">张蕾black(2)</option>
+         <option value="8">何哲black(1)</option>
+         <option value="9">郑梓妍white</option>
+          <option value="10">王乐</option>
+          <option value="11">廖海荣(陈磊)</option>
+          <option value="12">赵凯5s</option>
+          <option value="13">李罗洋5s</option>
+          <option value="14">张小云(sh)</option>
+          <option value="14">陈瑞雪(周2)</option>
+          <option value="14">李琪-白色-现号</option>
+
 
       <!--  <option value="3">蔡叙伦</option>   -->
       </select>
     <div id="blue">save</div>
-    <div id="youhua">设置</div>
+    <div id="youhua">隐藏</div>
+    <div id="buyouhua">显示</div>
+
+    <select id="denglu">
+
+
+
+
+    <!--  <option value="3">蔡叙伦</option>   -->
+    </select>
+
+    <div id="dama">打码</div>
+
+    <div style="width:180px;"><img src="blob:http%3A//www.10010.com/dbe96f22-7e0e-4356-99a2-7e0eedee1d15"></div>
+
   </body>
+    <script src="popup.js"></script>
 </html>
